# NOVA-triage

./: .gitignore  README.md  pyproject.toml
sample_data/: semgrep_results.json  vulnerable_app.py
src/vuln_triage_mcp/: __init__.py  server.py
src/vuln_triage_mcp/tools/: advisory.py  code_context.py  scan_loader.py
tests/: test_tools.py
